--- a/mx/templates/scheduler_details.html
+++ b/mx/templates/scheduler_details.html
@@ -6,6 +6,7 @@
         <th scope="col">Trigger Name</th>
         <th scope="col">Is Alive</th>
         <th scope="col">Repeat Interval</th>
+        <th scope="col">Trigger Now</th>
         <th scope="col">Last Triggered</th>
         <th scope="col">Next Run In</th>
         <th scope="col">Next Timeperiod</th>
@@ -23,6 +24,13 @@
                 <input type="hidden" name="timestamp" value="{{ row[5] }}" />
                 <input type="text" size="5" maxlength="5" name="interval" value="{{ row[2] }}" />
                 <input type="submit" value="Apply" />
+            </form>
+        </td>
+        <td>
+            <form method="GET" action="/action_trigger_now/">
+                <input type="hidden" name="process_name" value="{{ row[0] }}" />
+                <input type="hidden" name="timestamp" value="{{ row[5] }}" />
+                <input type="submit" value="Trigger" />
             </form>
         </td>
 
