[111] Rework to make creation and process registering easier

--- a/mx/templates/main_header.html
+++ b/mx/templates/main_header.html
@@ -27,7 +27,7 @@
         <td><a href="{{ url_for('scheduler_details') }}">scheduler details</a></td>
         <td><a href="{{ url_for('traffic_details') }}">traffic details</a></td>
         <td><a href="{{ url_for('financial_details') }}">financial details</a></td>
-        <td><a href="{{ url_for('processing_details') }}">processing details</a></td>
+        <td><a href="{{ url_for('processing_statements') }}">processing statements</a></td>
     </tr>
     </tbody>
 </table>
