--- a/mx/templates/scheduler_details.html
+++ b/mx/templates/scheduler_details.html
@@ -20,7 +20,7 @@
         <td>
             <form method="GET" action="/action_change_process_state/">
                 <input type="hidden" name="process_name" value="{{ row[0] }}" />
-                <input type="hidden" name="timestamp" value="{{ row[5] }}" />
+                <input type="hidden" name="timeperiod" value="{{ row[5] }}" />
                 <input type="checkbox" name="state" value="state_on" {% if row[6] %} checked {% endif %} />
                 <input type="submit" value="Apply" />
             </form>
@@ -30,7 +30,7 @@
         <td>
             <form method="GET" action="/action_change_interval/">
                 <input type="hidden" name="process_name" value="{{ row[0] }}" />
-                <input type="hidden" name="timestamp" value="{{ row[5] }}" />
+                <input type="hidden" name="timeperiod" value="{{ row[5] }}" />
                 <input type="text" size="5" maxlength="5" name="interval" value="{{ row[2] }}" />
                 <input type="submit" value="Apply" />
             </form>
@@ -38,7 +38,7 @@
         <td>
             <form method="GET" action="/action_trigger_now/">
                 <input type="hidden" name="process_name" value="{{ row[0] }}" />
-                <input type="hidden" name="timestamp" value="{{ row[5] }}" />
+                <input type="hidden" name="timeperiod" value="{{ row[5] }}" />
                 <input type="submit" value="Trigger" />
             </form>
         </td>
