--- a/mx/templates/main_header.html
+++ b/mx/templates/main_header.html
@@ -5,10 +5,10 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='ui_style.css') }}">
-    <script type="text/javascript" src="{{ url_for('static', file='jquery-1.6.1.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', file='jquery-1.8.2.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', file='jquery.dataTables-1.9.4.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='scheduler_ui.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='menu.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', file='jquery.dataTables.min.js') }}"></script>
     <title>main_header</title>
 </head>
 
