--- a/mx/templates/main_header.html
+++ b/mx/templates/main_header.html
@@ -17,7 +17,7 @@
     <thead>
     <tr>
         <th>Synergy Scheduler</th>
-        <th></th>
+        <th style="text-align: left">v. {{get_version()}}</th>
         <th></th>
         <th style="text-align: right">as of: {{get_current_time()}}</th>
     </tr>
