--- a/mx/templates/main_header.html
+++ b/mx/templates/main_header.html
@@ -19,14 +19,14 @@
         <th>Synergy Scheduler</th>
         <th style="text-align: left">v. {{get_version()}}</th>
         <th></th>
-        <th style="text-align: right">as of: {{get_current_time()}}</th>
+        <th style="text-align: right">page last updated: {{get_current_time()}}</th>
     </tr>
     </thead>
     <tbody>
     <tr>
         <td><a href="{{ url_for('scheduler_details') }}">scheduler details</a></td>
-        <td><a href="{{ url_for('traffic_details') }}">traffic details</a></td>
-        <td><a href="{{ url_for('financial_details') }}">financial details</a></td>
+        <td><a href="{{ url_for('traffic_details') }}">traffic processes</a></td>
+        <td><a href="{{ url_for('financial_details') }}">financial processes</a></td>
         <td><a href="{{ url_for('processing_statements') }}">processing statements</a></td>
     </tr>
     </tbody>
@@ -38,7 +38,7 @@
 <br/>
 
 <div id="footer" style="text-align: right"><a
-        href="mailto:bmushkevych@reinvent.com?subject=Comments to Scheduler MX page">Feedback</a></div>
+        href="mailto:mushkevych@users.noreply.github.com?subject=Comments to Scheduler MX page">Feedback</a></div>
 
 </body>
 </html>
