--- a/mx/templates/scheduler_details.html
+++ b/mx/templates/scheduler_details.html
@@ -4,9 +4,10 @@
     <thead>
     <tr class="oce-first">
         <th scope="col">On/Off</th>
-        <th scope="col">Trigger Name</th>
-        <th scope="col">Is Alive</th>
-        <th scope="col">Repeat Interval</th>
+        <th scope="col">Trigger Is Alive</th>
+        <th scope="col">Process Name</th>
+        <th scope="col">Process Type</th>
+        <th scope="col">Trigger Freq</th>
         <th scope="col">Trigger Now</th>
         <th scope="col">Last Triggered</th>
         <th scope="col">Next Run In</th>
@@ -19,33 +20,34 @@
     <tr>
         <td>
             <form method="GET" action="/action_change_process_state/">
-                <input type="hidden" name="process_name" value="{{ row[0] }}" />
-                <input type="hidden" name="timeperiod" value="{{ row[5] }}" />
-                <input type="checkbox" name="state" value="state_on" {% if row[6] %} checked {% endif %} />
+                <input type="hidden" name="process_name" value="{{ row[2] }}" />
+                <input type="hidden" name="timeperiod" value="{{ row[7] }}" />
+                <input type="checkbox" name="state" value="state_on" {% if row[0] %} checked {% endif %} />
                 <input type="submit" value="Apply" />
             </form>
         </td>
-        <td>{{ row[0] }}</td>
         <td>{{ row[1] }}</td>
+        <td>{{ row[2] }}</td>
+        <td>{{ row[3] }}</td>
         <td>
             <form method="GET" action="/action_change_interval/">
-                <input type="hidden" name="process_name" value="{{ row[0] }}" />
-                <input type="hidden" name="timeperiod" value="{{ row[5] }}" />
-                <input type="text" size="5" maxlength="5" name="interval" value="{{ row[2] }}" />
+                <input type="hidden" name="process_name" value="{{ row[2] }}" />
+                <input type="hidden" name="timeperiod" value="{{ row[7] }}" />
+                <input type="text" size="8" maxlength="32" name="interval" value="{{ row[4] }}" />
                 <input type="submit" value="Apply" />
             </form>
         </td>
         <td>
             <form method="GET" action="/action_trigger_now/">
-                <input type="hidden" name="process_name" value="{{ row[0] }}" />
-                <input type="hidden" name="timeperiod" value="{{ row[5] }}" />
+                <input type="hidden" name="process_name" value="{{ row[2] }}" />
+                <input type="hidden" name="timeperiod" value="{{ row[7] }}" />
                 <input type="submit" value="Trigger" />
             </form>
         </td>
 
-        <td>{{ row[3] }}</td>
-        <td>{{ row[4] }}</td>
         <td>{{ row[5] }}</td>
+        <td>{{ row[6] }}</td>
+        <td>{{ row[7] }}</td>
     </tr>
     {%- endfor %}
 
@@ -97,6 +99,5 @@
 
     </tbody>
 </table>
-
 
 {% endblock %}
