--- a/mx/templates/scheduler_details.html
+++ b/mx/templates/scheduler_details.html
@@ -9,7 +9,7 @@
         <th scope="col">Process Type</th>
         <th scope="col">Trigger Freq</th>
         <th scope="col">Trigger Now</th>
-        <th scope="col">Last Triggered</th>
+        <th scope="col">Trigger Last Active</th>
         <th scope="col">Next Run In</th>
         <th scope="col">Next Timeperiod</th>
     </tr>
