--- a/mx/templates/main_header.html
+++ b/mx/templates/main_header.html
@@ -24,7 +24,7 @@
     </thead>
     <tbody>
     <tr>
-        <td><a href="{{ url_for('scheduler_details') }}">scheduler details</a></td>
+        <td><a href="{{ url_for('scheduler_details') }}">scheduler entries</a></td>
         <td><a href="{{ url_for('traffic_details') }}">traffic processes</a></td>
         <td><a href="{{ url_for('financial_details') }}">financial processes</a></td>
         <td><a href="{{ url_for('processing_statements') }}">processing statements</a></td>
