Starting with the #14

--- a/mx/templates/main_header.html
+++ b/mx/templates/main_header.html
@@ -25,6 +25,7 @@
     <tbody>
     <tr>
         <td><a href="{{ url_for('scheduler_details') }}">scheduler entries</a></td>
+        <td><a href="{{ url_for('timetable_details') }}">timetable details</a></td>
         <td><a href="{{ url_for('traffic_details') }}">traffic processes</a></td>
         <td><a href="{{ url_for('financial_details') }}">financial processes</a></td>
         <td><a href="{{ url_for('processing_statements') }}">processing statements</a></td>
