--- a/mx/templates/timetable_details.html
+++ b/mx/templates/timetable_details.html
@@ -3,7 +3,7 @@
 
 {% for tree_row in details.entries %}
 
-    <b>Tree name: {{ tree_row[0] }}</b> is available at <a href="{{ url_for(tree_row[1]) }}">{{ tree_row[1] }} tab </a>
+    Details for <b>{{ tree_row[0] }}</b> (available at <a href="{{ url_for(tree_row[1]) }}">{{ tree_row[1] }}</a> tab as <b>{{ tree_row[2] }}</b>):
 
     <table style="width: 90%" class="one-column-emphasis">
     <thead>
@@ -13,11 +13,12 @@
         <th scope="col">State Machine</th>
         <th scope="col">Process Type</th>
         <th scope="col">Dependent On</th>
+        <th scope="col">Dependant Trees</th>
     </tr>
     </thead>
     <tbody>
 
-    {% for process_name, process_details in tree_row[2].iteritems() %}
+    {% for process_name, process_details in tree_row[3].iteritems() %}
     <tr>
         <td>{{ process_details[0] }}</td>
         <td>{{ process_details[1] }}</td>
