--- a/mx/templates/scheduler_entries.html
+++ b/mx/templates/scheduler_entries.html
@@ -7,7 +7,7 @@
         <th scope="col">Trigger Is Alive</th>
         <th scope="col">Process Name</th>
         <th scope="col">Process Type</th>
-        <th scope="col">Trigger Freq</th>
+        <th scope="col">Trigger Frequency</th>
         <th scope="col">Trigger Now</th>
         <th scope="col">Trigger Last Active</th>
         <th scope="col">Next Run In</th>
