Adding html page for ad-hock tasks, adding model and some stubs at the system level

--- a/mx/templates/timetable_details.html
+++ b/mx/templates/timetable_details.html
@@ -12,6 +12,7 @@
         <th scope="col">Time Qualifier</th>
         <th scope="col">State Machine</th>
         <th scope="col">Process Type</th>
+        <th scope="col">Run On Active Timeperiod</th>
         <th scope="col">Dependent On</th>
         <th scope="col">Dependant Trees</th>
     </tr>
