--- a/mx/templates/scheduler_managed_entries.html
+++ b/mx/templates/scheduler_managed_entries.html
@@ -6,33 +6,32 @@
         <th scope="col">On/Off</th>
         <th scope="col">Trigger Is Alive</th>
         <th scope="col">Process Name</th>
-        <th scope="col">Process Type</th>
         <th scope="col">Trigger Frequency</th>
         <th scope="col">Trigger Now</th>
-        <th scope="col">Trigger Last Active</th>
         <th scope="col">Next Run In</th>
         <th scope="col">Next Timeperiod</th>
     </tr>
     </thead>
     <tbody>
 
-    {%- for row in details.entries %}
+    {%- for row in details.managed_entries %}
     <tr>
         <td>
             <form method="GET" action="/action_change_process_state/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
-                <input type="hidden" name="timeperiod" value="{{ row[7] }}" />
+                <input type="hidden" name="process_type" value="{{ row[3] }}" />
+                <input type="hidden" name="timeperiod" value="{{ row[5] }}" />
                 <input type="checkbox" name="state" value="state_on" {% if row[0] %} checked {% endif %} />
                 <input type="submit" value="Apply" />
             </form>
         </td>
         <td>{{ row[1] }}</td>
         <td>{{ row[2] }}</td>
-        <td>{{ row[3] }}</td>
         <td>
             <form method="GET" action="/action_change_interval/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
-                <input type="hidden" name="timeperiod" value="{{ row[7] }}" />
+                <input type="hidden" name="process_type" value="{{ row[3] }}" />
+                <input type="hidden" name="timeperiod" value="{{ row[5] }}" />
                 <input type="text" size="8" maxlength="32" name="interval" value="{{ row[4] }}" />
                 <input type="submit" value="Apply" />
             </form>
@@ -40,37 +39,14 @@
         <td>
             <form method="GET" action="/action_trigger_now/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
-                <input type="hidden" name="timeperiod" value="{{ row[7] }}" />
+                <input type="hidden" name="process_type" value="{{ row[3] }}" />
+                <input type="hidden" name="timeperiod" value="{{ row[5] }}" />
                 <input type="submit" value="Trigger" />
             </form>
         </td>
 
         <td>{{ row[5] }}</td>
         <td>{{ row[6] }}</td>
-        <td>{{ row[7] }}</td>
-    </tr>
-    {%- endfor %}
-
-    </tbody>
-</table>
-
-<table style="width: 90%" class="one-column-emphasis">
-    <thead>
-    <tr class="oce-first">
-        <th scope="col">Replica Set</th>
-        <th scope="col">Master Connection</th>
-        <th scope="col">Slave Connections</th>
-        <th scope="col">Last Validated</th>
-    </tr>
-    </thead>
-    <tbody>
-
-    {%- for row in connections.entries %}
-    <tr>
-        <td>{{ row[0] }}</td>
-        <td>{{ row[1] }}</td>
-        <td>{{ row[2] }}</td>
-        <td>{{ row[3] }}</td>
     </tr>
     {%- endfor %}
 
