--- a/mx/templates/scheduler_freerun_entries.html
+++ b/mx/templates/scheduler_freerun_entries.html
@@ -19,8 +19,7 @@
         <td>
             <form method="GET" action="/action_change_process_state/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
-                <input type="hidden" name="process_type" value="{{ row[3] }}" />
-                <input type="hidden" name="timeperiod" value="" />
+                <input type="hidden" name="entry_name" value="{{ row[3] }}" />
                 <input type="checkbox" name="state" value="state_on" {% if row[0] %} checked {% endif %} />
                 <input type="submit" value="Apply" />
             </form>
@@ -30,8 +29,7 @@
         <td>
             <form method="GET" action="/action_change_interval/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
-                <input type="hidden" name="process_type" value="{{ row[3] }}" />
-                <input type="hidden" name="timeperiod" value="" />
+                <input type="hidden" name="entry_name" value="{{ row[3] }}" />
                 <input type="text" size="8" maxlength="32" name="interval" value="{{ row[4] }}" />
                 <input type="submit" value="Apply" />
             </form>
@@ -39,8 +37,7 @@
         <td>
             <form method="GET" action="/action_trigger_now/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
-                <input type="hidden" name="process_type" value="{{ row[3] }}" />
-                <input type="hidden" name="timeperiod" value="" />
+                <input type="hidden" name="entry_name" value="{{ row[3] }}" />
                 <input type="submit" value="Trigger" />
             </form>
         </td>
