--- a/mx/templates/main_header.html
+++ b/mx/templates/main_header.html
@@ -17,7 +17,8 @@
     <thead>
     <tr>
         <th>Synergy Scheduler</th>
-        <th style="text-align: left">v. {{get_version()}}</th>
+        <th style="text-align: left">build. {{get_version()}}</th>
+        <th></th>
         <th></th>
         <th></th>
         <th style="text-align: right">page last updated: {{get_current_time()}}</th>
@@ -25,7 +26,8 @@
     </thead>
     <tbody>
     <tr>
-        <td><a href="{{ url_for('scheduler_details') }}">scheduler entries</a></td>
+        <td><a href="{{ url_for('scheduler_managed_entries') }}">scheduler managed entries</a></td>
+        <td><a href="{{ url_for('scheduler_freerun_entries') }}">scheduler freerun entries</a></td>
         <td><a href="{{ url_for('traffic_details') }}">traffic processes</a></td>
         <td><a href="{{ url_for('financial_details') }}">financial processes</a></td>
         <td><a href="{{ url_for('processing_statements') }}">processing statements</a></td>
