--- a/mx/templates/scheduler_managed_entries.html
+++ b/mx/templates/scheduler_managed_entries.html
@@ -41,6 +41,7 @@
                 <input type="submit" value="Trigger" />
             </form>
         </td>
+        <td>{{ row[4] }}</td>
         <td>{{ row[5] }}</td>
     </tr>
     {%- endfor %}
