--- a/mx/templates/scheduler_freerun_entries.html
+++ b/mx/templates/scheduler_freerun_entries.html
@@ -10,6 +10,7 @@
         <th scope="col">Trigger Now</th>
         <th scope="col">Next Run In</th>
         <th scope="col">Arguments</th>
+        <th scope="col">Edit</th>
     </tr>
     </thead>
     <tbody>
@@ -17,7 +18,7 @@
     {%- for row in details.freerun_entries %}
     <tr>
         <td>
-            <form method="GET" action="/action_change_process_state/">
+            <form method="GET" action="/action_change_freerun_state/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
                 <input type="hidden" name="entry_name" value="{{ row[3] }}" />
                 <input type="checkbox" name="state" value="state_on" {% if row[0] %} checked {% endif %} />
@@ -27,7 +28,7 @@
         <td>{{ row[1] }}</td>
         <td>{{ row[2] }}</td>
         <td>
-            <form method="GET" action="/action_change_interval/">
+            <form method="GET" action="/action_change_freerun_interval/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
                 <input type="hidden" name="entry_name" value="{{ row[3] }}" />
                 <input type="text" size="8" maxlength="32" name="interval" value="{{ row[4] }}" />
@@ -35,7 +36,7 @@
             </form>
         </td>
         <td>
-            <form method="GET" action="/action_trigger_now/">
+            <form method="GET" action="/action_trigger_freerun_now/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
                 <input type="hidden" name="entry_name" value="{{ row[3] }}" />
                 <input type="submit" value="Trigger" />
@@ -44,10 +45,24 @@
 
         <td>{{ row[5] }}</td>
         <td>{{ row[6] }}</td>
+        <td>
+            <form method="GET" action="/edit_schedulable_form/">
+                <input type="hidden" name="process_name" value="{{ row[2] }}" />
+                <input type="hidden" name="entry_name" value="{{ row[3] }}" />
+                <input type="submit" value="Edit" />
+            </form>
+        </td>
     </tr>
     {%- endfor %}
 
+    <tr>
+        <td colspan="8">
+            <a href="#" onClick="MyWindow=window.open('{{ url_for('schedulable_form') }}','New Freerun Trigger',width=600,height=300); return false;">Add New Freerun Trigger</a>
+        </td>
+    </tr>
+
     </tbody>
 </table>
+
 
 {% endblock %}
