Addressing initial run crashes. Under umbrella of #19 and #15

--- a/mx/templates/schedulable_form.html
+++ b/mx/templates/schedulable_form.html
@@ -12,22 +12,20 @@
 <body>
 <pre id="json"></pre>
 
-<form style="text-align: center" action="edit_schedulable_form">
-    Process name:
-    <select name="process_name">
+<form style="text-align: center" action="/action_update_freerun_entry">
+    Process name: <select name="process_name">
         <option value="BashDriver">BashDriver</option>
-        {% if schedulable %}
-        <option value="{{ schedulable[0] }}" selected>{{ schedulable[0] }}</option>
-        {% endif %}
-    </select>
-    Entry name: <input type="text" name="entry_name" value="{{ schedulable[1] }}"><br>
-    Description: <input type="text" name="description" value="{{ schedulable[2] }}"><br>
-    <select name="state">
-        <option value="state_on" {% if schedulable[3] %} selected {% endif %}>STATE_ON</option>
-        <option value="state_off" {% if not schedulable[3] %} selected {% endif %}>STATE_OFF</option>
-    </select>
-    Trigger time: <input type="text" size="8" maxlength="32" name="interval" value="{{ schedulable[4] }}" /><br>
-    Arguments: <input type="text" size="8" maxlength="32" name="interval" value="{{ schedulable[5] }}" /><br>
+    </select><br/>
+
+    Entry name: <input type="text" name="entry_name" value="{% if handler %} {{ handler.get_freerun_entry().entry_name }} {% endif %}"><br/>
+    Description: <input type="text" name="description" value="{% if handler %} {{ handler.get_freerun_entry().description }} {% endif %}"><br/>
+    State: <select name="state">
+        <option value="state_on" {% if handler and handler.get_freerun_entry().process_state %} selected {% endif %}>STATE_ON</option>
+        <option value="state_off" {% if handler and not handler.get_freerun_entry().process_state %} selected {% endif %}>STATE_OFF</option>
+    </select> <br/>
+
+    Trigger time: <input type="text" size="8" maxlength="32" name="trigger_time" value="{% if handler %} {{ handler.get_freerun_entry().trigger_time }} {% endif %}" /><br/>
+    Arguments: <input type="text" size="8" maxlength="32" name="arguments" value="{% if handler %} {{ handler.get_freerun_entry().arguments }} {% endif %}" /><br/>
 
     <input type="submit" name="update_button" value="Update" onclick="window.close()"/>
     <input type="submit" name="delete_button" value="Delete" onclick="window.close()"/>
