--- a/mx/templates/scheduler_freerun_entries.html
+++ b/mx/templates/scheduler_freerun_entries.html
@@ -57,7 +57,8 @@
 
     <tr>
         <td colspan="8">
-            <a href="#" onClick="MyWindow=window.open('{{ url_for('schedulable_form') }}','New Freerun Trigger',width=600,height=300); return false;">Add New Freerun Trigger</a>
+            {% set form_url = url_for('new_schedulable_form') %}
+            <a href="#" onClick="MyWindow=window.open('{{ form_url }}','New Freerun Trigger',width=600,height=300); return false;">Add New Freerun Trigger</a>
         </td>
     </tr>
 
