--- a/mx/templates/scheduler_freerun_entries.html
+++ b/mx/templates/scheduler_freerun_entries.html
@@ -58,7 +58,7 @@
     <tr>
         <td colspan="8">
             {% set form_url = url_for('new_schedulable_form') %}
-            <a href="#" onClick="MyWindow=window.open('{{ form_url }}','New Freerun Trigger',width=600,height=300); return false;">Add New Freerun Trigger</a>
+            <a href="#" onClick="MyWindow=window.open('{{ form_url }}','New Freerun Trigger','width=600,height=300'); return false;">Add New Freerun Trigger</a>
         </td>
     </tr>
 
