--- a/mx/templates/schedulable_form.html
+++ b/mx/templates/schedulable_form.html
@@ -4,6 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='ui_style.css') }}">
     <script type="text/javascript" src="{{ url_for('static', file='json_formatter.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='jquery-1.8.2.min.js') }}"></script>
     <title>Scheduler Freerun Trigger</title>
@@ -12,26 +13,59 @@
 <body>
 <pre id="json"></pre>
 
+
 <form style="text-align: left" action="/action_update_freerun_entry">
-    Process name: <select name="process_name">
-        <option value="BashDriver">BashDriver</option>
-    </select><br/>
+    <table class="one-column-emphasis">
+        <tr>
+            <td>Process name:</td>
+            <td><select name="process_name" style="width: 236px">
+                <option value="BashDriver">BashDriver</option>
+            </select></td>
+        </tr>
+        <tr>
+            <td>Entry name:</td>
+            <td><input type="text" name="entry_name"
+                       value="{% if handler %}{{ handler.get_freerun_entry().entry_name }}{% endif %}"
+                    {% if handler %} readonly {% endif %}></td>
+        </tr>
 
-    Entry name: <input type="text" name="entry_name" value="{% if handler %}{{ handler.get_freerun_entry().entry_name }}{% endif %}"
-        {% if handler %} readonly {% endif %}><br/>
-    Description: <input type="text" name="description" value="{% if handler %}{{ handler.get_freerun_entry().description }}{% endif %}"><br/>
-    State: <select name="process_state">
-        <option value="state_on" {% if handler and handler.get_freerun_entry().process_state %} selected {% endif %}>STATE_ON</option>
-        <option value="state_off" {% if handler and not handler.get_freerun_entry().process_state %} selected {% endif %}>STATE_OFF</option>
-    </select> <br/>
+        <tr>
+            <td>Description:</td>
+            <td><input type="text" name="description"
+                       value="{% if handler %}{{ handler.get_freerun_entry().description }}{% endif %}"></td>
+        </tr>
 
-    Trigger time: <input type="text" size="8" maxlength="32" name="trigger_time" value="{% if handler %}{{ handler.get_freerun_entry().trigger_time }}{% endif %}" /><br/>
-    Arguments: <input type="text" size="8" maxlength="32" name="arguments" value="{% if handler %}{{ handler.get_freerun_entry().arguments|safe }}{% endif %}" /><br/>
+        <tr>
+            <td>State:</td>
+            <td><select name="state" style="width: 236px">
+                <option value="state_on"
+                        {% if handler and handler.get_freerun_entry().state == 'state_on' %} selected {% endif %}>
+                    STATE_ON
+                </option>
+                <option value="state_off"
+                        {% if handler and handler.get_freerun_entry().state == 'state_off'%} selected {% endif %}>
+                    STATE_OFF
+                </option>
+            </select></td>
+        </tr>
 
-    <input type="submit" name="insert_button" value="Insert" onclick="window.close()"/>
-    <input type="submit" name="update_button" value="Update" onclick="window.close()"/>
-    <input type="submit" name="delete_button" value="Delete" onclick="window.close()"/>
-    <input type="submit" name="cancel_button" value="Cancel" onclick="window.close()"/>
+        <tr>
+            <td>Trigger time:</td>
+            <td><input type="text" maxlength="32" name="trigger_time"
+                       value="{%- if handler %}{{ handler.get_freerun_entry().trigger_time }}{%- endif %}"/></td>
+        </tr>
+        <tr>
+            <td>Arguments:</td>
+            <td><textarea rows="10" cols="30" name="arguments"
+                    >{% if handler %}{{ handler.get_freerun_entry().arguments|jsonify }}{% endif %}</textarea></td>
+        </tr>
+        <td colspan="2" align="center">
+            <input type="submit" name="insert_button" value="Insert" onclick="window.close()"/>
+            <input type="submit" name="update_button" value="Update" onclick="window.close()"/>
+            <input type="submit" name="delete_button" value="Delete" onclick="window.close()"/>
+            <input type="submit" name="cancel_button" value="Cancel" onclick="window.close()"/>
+        </td>
+    </table>
 </form>
 
 </body>
