--- a/mx/templates/scheduler_freerun_entries.html
+++ b/mx/templates/scheduler_freerun_entries.html
@@ -6,6 +6,7 @@
         <th scope="col">On/Off</th>
         <th scope="col">Trigger Is Alive</th>
         <th scope="col">Process Name</th>
+        <th scope="col">Entry Name</th>
         <th scope="col">Trigger Frequency</th>
         <th scope="col">Trigger Now</th>
         <th scope="col">Next Run In</th>
@@ -27,6 +28,7 @@
         </td>
         <td>{{ row[1] }}</td>
         <td>{{ row[2] }}</td>
+        <td>{{ row[3] }}</td>
         <td>
             <form method="GET" action="/action_change_freerun_interval/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
@@ -58,7 +60,7 @@
     <tr>
         <td colspan="8">
             {% set form_url = url_for('new_schedulable_form') %}
-            <a href="#" onClick="MyWindow=window.open('{{ form_url }}','New Freerun Trigger','top=250,left=250,width=600,height=300'); return false;">Add New Freerun Trigger</a>
+            <a href="#" onClick="MyWindow=window.open('{{ form_url }}','New Freerun Trigger','top=250,left=250,width=680,height=550'); return false;">Add New Freerun Trigger</a>
         </td>
     </tr>
 
