--- a/mx/templates/schedulable_form.html
+++ b/mx/templates/schedulable_form.html
@@ -56,13 +56,17 @@
         </tr>
         <tr>
             <td>Arguments:</td>
-            <td><textarea rows="10" cols="30" name="arguments"
-                    >{% if handler %}{{ handler.get_freerun_entry().arguments|jsonify }}{% endif %}</textarea></td>
+            <td><textarea rows="10" cols="30" name="arguments">
+                {%- if handler -%}
+                    {{ handler.get_freerun_entry().arguments|jsonify }}
+                {%- else -%}
+                    {"script_path": "", "script_name": "", "script_params": "", "host": "" }
+                {%- endif -%}</textarea></td>
         </tr>
         <td colspan="2" align="center">
             <input type="submit" name="insert_button" value="Insert" onclick="window.close()"/>
             <input type="submit" name="update_button" value="Update" onclick="window.close()"/>
-            <input type="submit" name="delete_button" value="Delete" onclick="window.close()"/>
+            <input type="submit" name="delete_button" value="Delete" onclick="window.close()" {% if not handler %} disabled {% endif %}/>
             <input type="submit" name="cancel_button" value="Cancel" onclick="window.close()"/>
         </td>
     </table>
