--- a/mx/templates/schedulable_form.html
+++ b/mx/templates/schedulable_form.html
@@ -19,6 +19,7 @@
         <tr>
             <td>Process name:</td>
             <td><select name="process_name" style="width: 236px">
+                <option value="{{ handler.get_freerun_entry().process_name }}">{{ handler.get_freerun_entry().process_name }}</option>
                 <option value="BashDriver">BashDriver</option>
             </select></td>
             <td></td>
