--- a/mx/templates/processing_statements.html
+++ b/mx/templates/processing_statements.html
@@ -22,13 +22,13 @@
     </thead>
     <tbody>
 
-    {%- for row in details.entries %}
+    {%- for row in details.entries -%}
     <tr class="{{ row[2] }}">
         <td>{{ row[0] }}</td>
         <td>{{ row[1] }}</td>
         <td>{{ row[2] }}</td>
     </tr>
-    {%- endfor %}
+    {%- endfor -%}
 
     </tbody>
 </table>
