Adding different window behaviour for INSERT and DELETE/UPDATE/CANCEL actions.

--- a/mx/templates/schedulable_form.html
+++ b/mx/templates/schedulable_form.html
@@ -24,7 +24,7 @@
                 </option>
                 <option value="BashDriver">BashDriver</option>
             </select></td>
-            <td></td>
+            <td width="300px"></td>
         </tr>
         <tr>
             <td>Entry name:</td>
