--- a/mx/templates/schedulable_form.html
+++ b/mx/templates/schedulable_form.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='ui_style.css') }}">
     <script type="text/javascript" src="{{ url_for('static', file='json_formatter.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', file='jquery-1.8.2.min.js') }}"></script>
+    <script type="text/javascript">
+        window.onunload = refreshParent;
+        function refreshParent() {
+            window.opener.location.reload();
+        }
+    </script>
+
     <title>Scheduler Freerun Trigger</title>
 </head>
 
