Adding slightly stripped django settings to ultimately allow settings override

--- a/mx/templates/scheduler_freerun_entries.html
+++ b/mx/templates/scheduler_freerun_entries.html
@@ -53,9 +53,7 @@
             <form method="GET"
                  onsubmit="window.open('{{ url }}','Edit Freerun Trigger',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=750,height=550'); return false;">
-                <input type="submit" value="Edit"
-
-                        />
+                <input type="submit" value="Edit"/>
             </form>
         </td>
     </tr>
