--- a/synergy/mx/templates/scheduler_freerun_entries.html
+++ b/synergy/mx/templates/scheduler_freerun_entries.html
@@ -21,9 +21,10 @@
     {%- for row in details.freerun_entries %}
     <tr>
         <td>
-            <form method="GET" action="/action_change_freerun_state/">
+            <form method="GET" action="/action_change_state/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
                 <input type="hidden" name="entry_name" value="{{ row[3] }}" />
+                <input type="hidden" name="is_freerun" value="True" />
                 <input type="checkbox" name="state" value="state_on" {% if row[0] %} checked {% endif %} />
                 <input type="submit" value="Apply" />
             </form>
@@ -32,17 +33,19 @@
         <td>{{ row[2] }}</td>
         <td>{{ row[3] }}</td>
         <td>
-            <form method="GET" action="/action_change_freerun_interval/">
+            <form method="GET" action="/action_change_interval/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
                 <input type="hidden" name="entry_name" value="{{ row[3] }}" />
+                <input type="hidden" name="is_freerun" value="True" />
                 <input type="text" size="8" maxlength="32" name="interval" value="{{ row[4] }}" />
                 <input type="submit" value="Apply" />
             </form>
         </td>
         <td>
-            <form method="GET" action="/action_trigger_freerun_now/">
+            <form method="GET" action="/action_trigger_now/">
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
                 <input type="hidden" name="entry_name" value="{{ row[3] }}" />
+                <input type="hidden" name="is_freerun" value="True" />
                 <input type="submit" value="Trigger" />
             </form>
         </td>
@@ -50,8 +53,8 @@
         <td>{{ row[5] }}</td>
         <td>{{ row[6]|jsonify }}</td>
         <td>
-            {% set form_url = url_for('edit_schedulable_form') %}
-            {% set url = form_url + '?process_name=' + row[2] + '&entry_name=' + row[3] %}
+            {% set form_url = url_for('action_get_log') %}
+            {% set url = form_url + '?process_name=' + row[2] + '&entry_name=' + row[3] + '&is_freerun=True'%}
             <form method="GET"
                  onsubmit="window.open('{{ url }}','View Log',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=720,height=480'); return false;">
@@ -59,8 +62,8 @@
             </form>
         </td>
         <td>
-            {% set form_url = url_for('edit_schedulable_form') %}
-            {% set url = form_url + '?process_name=' + row[2] + '&entry_name=' + row[3] %}
+            {% set form_url = url_for('action_get_uow') %}
+            {% set url = form_url + '?process_name=' + row[2] + '&entry_name=' + row[3] + '&is_freerun=True'%}
             <form method="GET"
                  onsubmit="window.open('{{ url }}','Geo Uow',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=400,height=350'); return false;">
@@ -69,7 +72,7 @@
         </td>
         <td>
             {% set form_url = url_for('edit_schedulable_form') %}
-            {% set url = form_url + '?process_name=' + row[2] + '&entry_name=' + row[3] %}
+            {% set url = form_url + '?process_name=' + row[2] + '&entry_name=' + row[3] + '&is_freerun=True'%}
             <form method="GET"
                  onsubmit="window.open('{{ url }}','Edit Freerun Trigger',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=750,height=550'); return false;">
