--- a/synergy/mx/templates/scheduler_freerun_entries.html
+++ b/synergy/mx/templates/scheduler_freerun_entries.html
@@ -66,9 +66,9 @@
             {% set form_url = url_for('action_get_uow') %}
             {% set url = form_url + '?process_name=' + row[2] + '&entry_name=' + row[3] + '&is_freerun=True'%}
             <form method="GET"
-                 onsubmit="window.open('{{ url }}','Geo Uow',
+                 onsubmit="window.open('{{ url }}','Get Uow',
                  'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=400,height=350'); return false;">
-                <input type="submit" value="Geo Uow"/>
+                <input type="submit" value="Get Uow"/>
             </form>
         </td>
         <td>
@@ -76,7 +76,7 @@
                 <input type="hidden" name="process_name" value="{{ row[2] }}" />
                 <input type="hidden" name="entry_name" value="{{ row[3] }}" />
                 <input type="hidden" name="is_freerun" value="True" />
-                <input type="submit" value="Cancel UOW" />
+                <input type="submit" value="Cancel Uow" />
             </form>
         </td>
         <td>
